# orangesql

./: .gitignore  CMakeLists.txt  MIT License  README.md  config.json
cache/: cache_manager.cpp  cache_manager.h  lru_cache.cpp  lru_cache.h  page_cache.cpp  page_cache.h
cli/: console.cpp  console.h  main.cpp
engine/: executor_context.cpp  executor_context.h  index_scan.cpp  index_scan.h  optimizer.cpp  optimizer.h  query_executor.cpp  query_executor.h
include/: config.h  constants.h  errors.h  logger.h  status.h  types.cpp  types.h  utils.cpp  utils.h
index/: btree.cpp  btree.h  btree_cache.cpp  btree_cache.h  btree_concurrent.cpp  btree_concurrent.h  btree_node.cpp  btree_node.h  bulk_loader.cpp  bulk_loader.h  index_manager.cpp  index_manager.h  index_stats.cpp  index_stats.h
metadata/: catalog.cpp  catalog.h  index_metadata.cpp  index_metadata.h  schema.cpp  schema.h  statistics.cpp  statistics.h  table_metadata.cpp  table_metadata.h
parser/: ast.h  lexer.cpp  lexer.h  sql_parser.cpp  sql_parser.h
storage/: buffer_pool.cpp  buffer_pool.h  buffer_pool_manager.cpp  buffer_pool_manager.h  file_manager.cpp  file_manager.h  page.cpp  page.h  record.cpp  record.h  table.cpp  table.h
tests/: CMakeLists.txt
tests/benchmark/: CMakeLists.txt  bench_btree.cpp  bench_bulk_load.cpp
tests/integration/: test_recovery.cpp
tests/unit/: test_btree.cpp  test_buffer_pool.cpp  test_concurrency.cpp  test_wal.cpp
transaction/: checkpoint.cpp  checkpoint.h  lock_manager.cpp  lock_manager.h  mvcc.cpp  mvcc.h  recovery.cpp  recovery.h  transaction_manager.cpp  transaction_manager.h  wal.cpp  wal.h
